--- a/public/style/navigatorStyle.css
+++ b/public/style/navigatorStyle.css
@@ -1,18 +1,51 @@
 .navigation-box {
-    width: 250px;
-    position: fixed;
-    top: 40%;
-    left: 80%;
-
-    color: #868e96;
-    font-size: 12px;
+  display: none; /* 기본적으로 숨김 */
+  width: 250px;
+  position: fixed;
+  line-height: 1.5;
+  padding-left: 15px;
+  border-left: 2px solid #f1f3f5;
+  color: #868e96;
+  font-size: 12px;
+  max-height: 400px;
+  overflow: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: #868e96 #f1f3f5;
 }
 
+@media screen and (min-width: 1280px) {
+  .navigation-box {
+    display: block;
+    top: calc(30% - 10px);
+    left: 50%;
+    transform: translateX(390px);
+  }
+}
+
+
+/* 나머지 스타일은 변경 없음 */
 .navigation-link-h2 {
-    margin-left: 9px;
+  margin-left: 9px;
 }
 
 .navigation-link:hover {
-    color: #000000;
+  color: #000000;
 }
 
+.navigation-box::-webkit-scrollbar {
+  width: 8px;
+}
+
+.navigation-box::-webkit-scrollbar-track {
+  /* background: #f1f3f5; */
+}
+
+.navigation-box::-webkit-scrollbar-thumb {
+  background-color: #868e96;
+  border-radius: 10px;
+  border: 2px solid #f1f3f5;
+}
+
+.navigation-box::-webkit-scrollbar-thumb:hover {
+  background: #6e7277;
+}
