feat: add animation so the footer gradually disappears

--- a/public/style/navigatorStyle.css
+++ b/public/style/navigatorStyle.css
@@ -38,7 +38,9 @@
 }
 
 .hidden {
-  display: none;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease, visibility 0s 0.5s;
 }
 
 .active-tag {
